--- a/package.json
+++ b/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "jobify",
-  "version": "0.1.0",
-  "private": true,
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "concurrently \"npm run dev\" \"cd backend & npm start\"",
-    "dev": "next dev",
-    "build": "next build",
-    "lint": "next lint"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "concurrently": "^8.2.2",
-    "javascript-time-ago": "^2.5.9",
-    "js-cookie": "^3.0.5",
-    "lucide-react": "^0.367.0",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1",
-    "react-range-slider-input": "^3.0.7",
-    "react-redux": "^9.1.0"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "aws4": "^1.12.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.1",
+    "nodemailer": "^6.9.13",
+    "nodemon": "^3.1.0",
+    "otp-generator": "^4.0.1",
+    "validator": "^13.11.0"
   }
 }
