--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URL=mongodb+srv://abhaytechhub:abhaytechhub@cluster0.yky0qyx.mongodb.net/jobify?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://rajiv84ia:Rajiv4@@jobify.le24xaw.mongodb.net/?retryWrites=true&w=majority&appName=jobify
 JWT_SECRET=%AA(|+=aV1BRA!ifG@MCCJiVE0e]D?
