--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,5 @@
-sonar.projectKey=nodejs
+sonar.projectKey=my_nodejs_project
+sonar.projectName=My Node.js Project
+sonar.sources=.
+sonar.language=javascript
+sonar.sourceEncoding=UTF-8
